--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,8 @@ venv
 .idea
 
 # MUST remain on your computers ONLY (write access to DB!)
-src/database/cred.json
+src/database/firestore/cred.json
+src/database/client_secrets.json
+
+# python stuff
+*.pyc
