Match page done, uploading files check

--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "multiselect-react-dropdown": "^1.6.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.2",
     "react-icons": "^4.2.0",
     "react-image-picker": "^1.1.1",
     "react-router-dom": "^5.2.0",
