--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
+    "react-hot-toast": "^1.0.2",
     "react-icons": "^4.2.0",
     "react-image-picker": "^1.1.1",
     "react-router-dom": "^5.2.0",
