--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,8 @@
     "react-hot-toast": "^1.0.2",
     "react-icons": "^4.2.0",
     "react-image-picker": "^1.1.1",
+    "react-lottie": "^1.2.3",
+    "react-parallax-tilt": "^1.5.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
