--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "react-image-picker": "^1.1.1",
     "react-lottie": "^1.2.3",
     "react-parallax-tilt": "^1.5.5",
+    "react-progress-button": "^5.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
