--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "file-saver": "^2.0.5",
     "multiselect-react-dropdown": "^1.6.11",
+    "rc-slider": "^9.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
