Cleaned up firebase & spotify access code

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ front/package-lock.json
 # Misc
 /src/database/metadata_processing/.cache
 src/database/metadata_processing/output_spotipy.json
+*.mid
