--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "file-saver": "^2.0.5",
+    "firebase": "^8.4.3",
+    "firebase-admin": "^9.7.0",
     "multiselect-react-dropdown": "^1.6.11",
     "rc-slider": "^9.7.2",
     "react": "^17.0.2",
