--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ front/package-lock.json
 src/database/metadata_processing/output_spotipy.json
 front/src/database/firestore/cred.json
 *.mid
+.vscode/settings.json
