--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "react-progress-button": "^5.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "superagent": "^6.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
