Script for processing MIDI files & uploading files + metadata to Firebase :white_check_mark:

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ front/package-lock.json
 
 # Misc
 /src/database/metadata_processing/.cache
+src/database/.cache
 src/database/metadata_processing/output_spotipy.json
 front/src/database/firestore/cred.json
 *.mid
