--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "multiselect-react-dropdown": "^1.6.11",
     "rc-slider": "^9.7.2",
     "react": "^17.0.2",
+    "react-autocomplete": "^1.8.1",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
     "react-hot-toast": "^1.0.2",
