--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ src/database/metadata_processing/output_spotipy.json
 front/src/database/firestore/cred.json
 *.mid
 .vscode/settings.json
+src/database/firestore/backup_file.json
