--- a/front/package.json
+++ b/front/package.json
@@ -7,9 +7,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "dangerously-set-html-content": "^1.0.8",
     "file-saver": "^2.0.5",
     "firebase": "^8.4.3",
     "firebase-admin": "^9.7.0",
+    "focus-visible": "^5.2.0",
+    "html-midi-player": "^1.1.1",
     "multiselect-react-dropdown": "^1.6.11",
     "rc-slider": "^9.7.2",
     "react": "^17.0.2",
